# disbot-py

./: .gitignore  README.md  config.py  main.py  pyproject.toml
bot/: bot.py
cogs/: botinfo.py  errorhandler.py  event_handler.py  events.py  general.py  message.py  moderation.py  roles.py
utils/: dtime.py  errors.py  logger.py  moderation.py  response.py  roles.py
